# invokeai-py-client

./: -  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  ROADMAP.md  batch_data_debug.json  check_boards.py  check_models.py  generate_batch_images.py  generate_to_board_fixed.py  mkdocs.yml  pyproject.toml  test_api.py  test_invokeai_api.py  test_model_generation.py  test_workflow_api.py  wget-log
.claude/agents/: api-reverse-engineer.md  python-api-architect.md
.github/workflows/: create-release.yml  deploy-docs.yml  publish-to-pypi.yml  publish.yml  test-and-build.yml
.kilocode/rules/: run-python.md
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/backup/backup_1754764473758/: backup-meta.json
.promptx/memory/webapi-expert/: declarative.dpml
.promptx/resource/: project.registry.json
context/: README.md
context/design/: README.md  terminology.md  usage-pattern.md
context/hints/: README.md  about-workflow-upstream-model-rationale.md  howto-copy-and-paste-image-to-assets.md  howto-delete-image-by-name.md  howto-extract-invokeai-workflow-models.md  howto-get-workflow-output-images-and-boards.md  howto-include-source-links-in-docs.md  howto-map-workflow-image-nodes-to-boards.md  howto-move-image-to-board.md  howto-replicate-sdxl-flux-refine-workflow.md  howto-specify-gpu-id-in-docker-compose.md  howto-test-invokeai-api.md  howto-use-gpsd-from-cpp-python-bash.md  howto-use-invokeai-api.md  howto-use-invokeai-workflow-api.md  howto-use-jsonpath-ng.md  howto-use-shot-scraper-for-js-rendered-content.md  howto-use-webapi-tools.md  invokeai-board-assignment-solution.md
context/hints/deprecated/: README.md  invokeai-openapi.json  my-design.md
context/hints/impl/: about-api-client-architecture-patterns.md
context/hints/invokeai-kb/: 01-workflow-basics.md  02-sdxl-controlnet-ipadapter.md  03-flux-controlnet.md  about-invokeai-configurable-dirs.md  about-invokeai-output-nodes.md  about-invokeai-workflow-input-types.md  about-output-nodes.md  howto-find-invokeai-workflow-schema.md  howto-implement-invokeai-workflow-fields.md  howto-interpret-workflow-form-field.md  howto-use-invokeai-streaming.md  invokeai-api-list.md  invokeai-openapi-v6.8.json
context/instructions/: README.md  runtime-info.md
context/logs/: README.md
context/logs/code-reivew/: 20250819-174650-src-review.md  20250821-145942-image-field-detection-bug.md  20250821-152104-sampling_utils-review.md  (+2 more)
context/plans/: README.md
context/refcode/: README.md
context/roles/: README.md  python-architect.md  python-docuwriter.md  python-engineer.md  webapi-debugger.md
context/summaries/: README.md
context/tasks/: README.md  task-anything.md  task-check-design.md  task-explore-api.md  task-job-repo.md  task-model-management-api.md
context/tools/: README.md
data/: README.md
data/api-calls/: call-wf-flux-image-to-image-1.json  call-wf-flux-image-to-image-2.json  call-wf-flux-image-to-image.json  call-wf-sdxl-flux-refine.json  call-wf-sdxl-text-to-image.json
data/examples/: query-item.json
data/workflows/: example-nodes-schema.md  example-nodes.json  flux-image-to-image.json  sdxl-flux-refine.json  sdxl-text-to-image.json
dockers/: README.md  generate-blank-invokeai-config.sh  generate-docker-compose.sh
docs/: README.md  changelog.md  complete-project-summary.md  complete-solution-summary.md  direct-database-hack-analysis.md  faq.md  gui-sorting-api-mapping.md  index.md  intro.pptx  invokeai-concepts.md  job-queue-system.md  queue-api-sorting-analysis.md  task-3-implementation-summary.md  task-4-implementation-summary.md
docs/api-reference/: boards.md  client.md  dnn_model_repo.md  fields.md  index.md  models.md  quick.md  utilities.md  workflow.md
docs/developer-guide/: architecture.md  contributing.md  extensions.md  index.md  testing.md  upstream-apis.md
docs/examples/: flux-image-to-image.md  index.md  multi-stage-refine.md  raw-api.md  sdxl-text-to-image.md
docs/getting-started/: concepts.md  index.md  installation.md  quickstart.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
docs/user-guide/: boards.md  execution-modes.md  field-types.md  images.md  index.md  inputs.md  models.md  output-mapping.md  workflow-basics.md
examples/: README.md  api-demo-gui-sorting-simple.py  api-demo-gui-sorting.py  api-demo-job-queue.py  api-demo-job-submission.py  api-demo-latest-image.py  api-demo-upload-image.py  async_sdxl_text_to_image_workflow.py  get-starred-from-probe.py  test-async-workflow.py  test-dnn-model-repo.py
examples/model-management/: delete_all_models.py  delete_model.py  install_hf_model.py  install_local_model.py  list_models.py
examples/pipelines/: README.md  flux-image-to-image.py  sdxl-flux-refine.py  sdxl-text-to-image.py
examples/raw-apis/: README.md  api-demo-boards.py  api-demo-dnn-models.py  api-demo-job-exception-handling.py  api-demo-job-queue-direct-db.py  api-demo-job-queue-hybrid.py  api-demo-starred-images.py
scripts/: README.md  install-webapi-tools.ps1  install-webapi-tools.sh
src/invokeai_py_client/: __init__.py  client.py  exceptions.py  fields.py  ink_fields.py  models.py  py.typed  types.py  types_extra.py  utils.py  workflow.py
tests/: README.md  manual_model_install_nonexistent.py  test_all_field_types.py  test_flux_i2i_submission.py  test_node_to_image_output_mapping.py  test_quick_copy_image_to_board.py  test_quick_sdxl_text_to_image.py  test_sdxl_flux_refine_submission.py  test_sdxl_flux_refine_workflow.py  test_sdxl_text_to_image_workflow.py  test_sdxl_text_to_image_workflow_async.py  test_upstream_models_roundtrip.py  test_workflow_submission_complete_fixed.py  test_workflow_submission_sync.py
tests/deprecated/: README.md  debug_images.py  generate_and_assign_board.py  generate_batch_images.py  generate_to_board.py  generate_to_board_fixed.py  invokeai_api_demo.py
unittests/dnn_model/: test_scan_folder.py
unittests/flux/: test_flux_i2i_submission.py
unittests/queue/: test_queue_integration.py
unittests/sdxl/: test_sdxl_text_to_image_workflow.py
(+73 files in other folders)
